2007-05-06

  Fix some bugs: parsing of arguments, saving of vertical text,
  and compilation without INSANI defined.


2007-05-01

  Merge in some more changes from Roine designed to make life better
  for OS X users:

  Include an Xcode project to simplify Mac builds.

  If game resources are not in the app's bundle, look for them in the
  application path instead.

  Store saves and other data under Application Support, not
  Preferences.


2007-04-27

  Merge in Roine's scaling patch.  This is considered experimental,
  and will currently only be enabled if RCA_SCALE is defined at
  compile-time.

  Fix a silly bug in the previous mergings.


2007-04-25

  Merge in an adapted version of the `drawfix' patch to speed up
  screen updates in windowed mode, plus a number of other patches:

  Support both SAR and NSA archives at the same time (zalas)

  Reduce flicker when sprites are changed (Roine Gustafsson)

  Fix gcc detection on OS X (Roine)

  Display missing game data error as a dialog on OS X (Roine)

  Support multiple games without game IDs at the same time (Roine)

  Fix incorrect clipping of text shadow (Roine)


2007-04-15

  Merge in useful fixes from onscripter-20070206.


2007-04-08

  Update build system to use a configure script that generates a
  platform-appropriate makefile.  This also verifies that all required
  dependencies are available, and provides the option of building
  local libraries as required.  The end result is a package that can
  reasonably be distributed in source form for Linux users.
  In the process support for PSP, iPod, etc. has been removed; it
  could be replaced easily enough if anyone was available to test.

  Translate README.

  To make life easier with existing games, add the ability to store
  game ID in a file `game.id' as an alternative to modifying 0.txt.


2006-11-22

  Implement default data/save separation for Windows and Linux too.
  On Windows, saves go under the global Application Data folder; on